# easyagent

./: .gitignore  Makefile  README.md  pyproject.toml
easyagent/: sdk.py
easyagent/adapters/a2a/: __init__.py  server.py
easyagent/adapters/fastapi/: __init__.py  copilotkit.py  router.py
easyagent/adapters/fastapi/middleware/: __init__.py  logging_context.py
easyagent/agent/: agent.py  discovery.py  opensandbox.py
easyagent/auth/: __init__.py  providers.py
easyagent/models/orm/: session.py  user.py
easyagent/models/schema/: ag_ui.py  agent.py  auth.py  session.py  user.py
easyagent/repos/: factory.py  ports.py  session_repo.py  user_repo.py
easyagent/services/: session_service.py  user_service.py
easyagent/utils/: db.py  files.py  logging.py  settings.py
examples/: minimal_server.py
examples/a2a/hello_world/: client.py
examples/a2a/multi_agent/: README.md  master_agent.py  sub_agent.py
examples/ag_ui/: hello_ag_ui_agent.py  stream_client.py
examples/auth/: hello_agent.py
examples/cluster_mode/: hello_agent.py
examples/hello_world/: hello_agent.py
examples/multi_agent/: master_agent.py  sub_agent.py
examples/sandbox/: hello_sandbox_agent.py  pyproject.toml
examples/skills/: README.md  weather_skill_agent.py
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/components/: ChatInterface.tsx  ChatMessage.tsx  ConfigDialog.tsx
frontend/src/app/hooks/: useChat.ts  useThreads.ts
frontend/src/lib/: config.ts
frontend/src/providers/: ChatProvider.tsx
gateway/: __init__.py  app.py  main.py  pyproject.toml
tests/: test_a2a_hello_world.py  test_auth_agent.py  test_auth_providers_unit.py  test_cluster_mode_mock_injection.py  test_copilotkit_integration_unit.py  test_deep_agent_runner_unit.py  test_logging_context_middleware_unit.py  test_logging_utils_unit.py  test_me_sessions_routes_unit.py  test_mock_hello_agent.py  test_model_injection.py  test_multi_agent.py  test_opensandbox_backend_unit.py  test_scripted_mock_chat_model.py  test_settings_env_unit.py  test_sqlite_legacy_migration_unit.py  test_tmp_path_routing_unit.py  test_weather_skill_agent.py
tests/tools/: __init__.py  mock_chat_model.py
(+2 files in other folders)
