[project]
name = "easyagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.4.2",
    "fastapi>=0.116.1",
    "langchain-openai>=1.1.9",
    "langfuse>=3.14.1",
    "langgraph>=1.0.8",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg[binary]>=3.2.10",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]

[tool.uv.workspace]
members = [
    "examples/hello_world",
]
