[project]
name = "easyagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ag-ui-langgraph",
    "a2a-sdk>=0.3.24",
    "deepagents>=0.4.2",
    "fastapi==0.115.14",
    "langchain-openai>=1.1.9",
    "langfuse>=3.14.1",
    "langgraph>=1.0.8",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg[binary]>=3.2.10",
    "python-dotenv>=1.2.1",
    "sse-starlette>=3.0.0",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
    "opensandbox>=0.1.5",
    "copilotkit>=0.1.78",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["easyagent*"]
